manifests/GKE/java-backend.yml
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: todo-back-service
spec:
  type: ClusterIP
  selector:
    app: todo-app-back
  ports:
    - name: back-svc-port
      port: 8091          # The service is listening on this port.
      protocol: TCP
      targetPort: app-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: todo-app-back-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-back
  template:
    metadata:
      labels:
        app: todo-app-back
    spec:
      containers:
        - name: todo-app-back
          image: backend-image
          imagePullPolicy: Always
          ports:
            - containerPort: 8091
              name: app-port
          readinessProbe:
            httpGet:
              port: 8091
              path: /todos
          livenessProbe:
            httpGet:
              port: 8091
              path: /todos
          startupProbe:
            httpGet:
              port: 8091
              path: /todos
          volumeMounts:
            - name: shared-volume  # used to store daily image in it
              mountPath: /home
            - name: secret
              mountPath: "/secrets"
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: todo-image-storage-clm
        - name: secret
          secret:
            secretName: todo-postgres
            defaultMode: 0400
