manifests/GKE/react-frontend.yml
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: todo-front-service
spec:
  type: ClusterIP
  selector:
    app: todo-app-front
  ports:
    - name: front-svc-port
      port: 3000       # The service is listening on this port.
      protocol: TCP
      targetPort: app-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: todo-app-front-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-front
  template:
    metadata:
      labels:
        app: todo-app-front
    spec:
      containers:
        - name: todo-app-front
          image: mikhailzvagelsky/todo-app-react:3.03
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: app-port
