manifests/GKE/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /daily_image
            pathType: Prefix
            backend:
              service:
                name: todo-back-service
                port:
                  name: back-svc-port
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-back-service
                port:
                  name: back-svc-port
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-front-service
                port:
                  name: front-svc-port
